Styles and color update

--- a/assets/css/global.css
+++ b/assets/css/global.css
@@ -4,18 +4,44 @@
 }
 
 body {
-    background-color: #f6f8fc;
+           background-color: #F0DBDB;
+        /*background-image: url('../css/images/wallpaper.jpg');
+        background-repeat: no-repeat;
+        background-attachment: fixed;
+        background-size: cover;
+        color: #FFFFFF;*/
+}
+
+h1{
+    font-size: 3rem;
+    color: #D23369;
+    font-family: 'Montserrat', sans-serif;
+    text-align: center;
 }
 
 .content {
     width: 100vw;
-    height: 100vh;
+    height: 90%;
     padding: 1rem;
-    background-color: #fff;
+    background-color: #FFFFFF;
 }
+
+.header-pokemon{
+    background-color: #FFFFFF;
+}
+
 
 @media screen and (min-width: 992px) {
     .content {
+        max-width: 992px;
+        height: auto;
+        margin: 1rem auto;
+        border-radius: 1rem;
+    }
+}
+
+@media screen and (min-width: 992px) {
+    .background-img {
         max-width: 992px;
         height: auto;
         margin: 1rem auto;
